--- a/presentation/examples/timer/views/timerapp.example
+++ b/presentation/examples/timer/views/timerapp.example
@@ -1,7 +1,3 @@
-/** @jsx React.DOM */
-
-'use strict';
-
 var React = require('react');
 
 var TimerActions = require('../actions/timer.js');
@@ -11,7 +7,7 @@ var TimerApp = React.createClass({
 
   render: function() {
     return (
-      <div>
+      <div className="timer-app">
         <Timer/>
         <button onClick={this._startTimer}>Start</button>
         <button onClick={this._stopTimer}>Pause</button>
@@ -29,7 +25,7 @@ var TimerApp = React.createClass({
   },
 
   _resetTimer: function() {
-    TimerActions.setTimer(25);
+    TimerActions.setTimer(5);
   }
 
 });
